[gd_scene load_steps=7 format=2]

[ext_resource path="res://textures/background/stageTutorial.png" type="Texture" id=1]
[ext_resource path="res://scripts/configScene.gd" type="Script" id=2]
[ext_resource path="res://sounds/music/club_song_2.mp3" type="AudioStream" id=3]
[ext_resource path="res://textures/icons/volumen.png" type="Texture" id=4]
[ext_resource path="res://textures/icons/mute.png" type="Texture" id=5]
[ext_resource path="res://textures/icons/return.png" type="Texture" id=6]

[node name="Config" type="Node2D"]
script = ExtResource( 2 )

[node name="stage-tutorial" type="Sprite" parent="."]
position = Vector2( 0.00311281, -0.00889696 )
scale = Vector2( 0.511968, 0.499904 )
texture = ExtResource( 1 )
offset = Vector2( 999.896, 600.215 )

[node name="Control" type="Control" parent="."]
margin_right = 144.0
margin_bottom = 85.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="volumeBar" type="HSlider" parent="Control"]
margin_left = 369.0
margin_top = 225.0
margin_right = 586.0
margin_bottom = 241.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control/volumeBar"]
stream = ExtResource( 3 )
autoplay = true

[node name="volumenMax" type="Sprite" parent="Control/volumeBar"]
position = Vector2( 239.973, 8.08478 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 4 )

[node name="volumenMin" type="Sprite" parent="Control/volumeBar"]
position = Vector2( -20.1519, 7.38574 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 5 )

[node name="GridContainer" type="GridContainer" parent="Control/volumeBar"]
visible = false
margin_left = -92.314
margin_top = -37.406
margin_right = 400.686
margin_bottom = 169.594
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/volumeBar/GridContainer"]
margin_bottom = 14.0

[node name="return" type="Button" parent="Control"]
margin_left = 29.0
margin_top = 24.0
margin_right = 140.0
margin_bottom = 73.0
text = "Volver"
icon = ExtResource( 6 )
flat = true
clip_text = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fullscreen" type="Button" parent="Control"]
margin_left = 434.335
margin_top = 194.505
margin_right = 512.335
margin_bottom = 214.505
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="Control/volumeBar" to="." method="_on_volumeBar_value_changed"]
[connection signal="pressed" from="Control/return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="Control/fullscreen" to="." method="_on_fullscreen_pressed"]
